--- a/views/empty_bookmark.hbs
+++ b/views/empty_bookmark.hbs
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    {{> nav this}}
+    {{> nav this.data}}
     <div class="row">
         <div class="alert alert-success" id="alert_info" role="alert">No Bookmark Added</div>
     </div>
