--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,13 @@
-<div class="container-fluid">
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     {{> nav this.data}}
+    <main class="mdl-layout__content">
+        <div class="page-content" style="padding-left:100px;">
+
+        </div>
+    </main>
+</div>
+<div class="container-fluid">
+
     <div class="row">
         <input type="text" id="search_bar" placeholder="Search"/>
         <span id="btn_search" class="pull-right glyphicon glyphicon-search"></span>
