--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,15 +5,22 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>KRDS Watch</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
-    <link rel="stylesheet" href="/stylesheet/bootstrap.css">
+    <script src="/javascript/lib/jquery-1.11.3.min.js"></script>
+    <!-- link rel="stylesheet" href="/stylesheet/bootstrap.css" -->
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css">
+    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
     <link rel="stylesheet" href="/stylesheet/index.css">
     <script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
-    <script src="/javascript/lib/jquery-1.11.3.min.js"></script>
-    <script src="/javascript/lib/bootstrap.min.js"></script>
+
+    <!-- script src="/javascript/lib/bootstrap.min.js"></script -->
     <meta name="google-signin-client_id" content="640464385073-dinae39hei1id2j9vb4h11h9jsu4udli.apps.googleusercontent.com">
   </head>
 <body>
     {{{ body }}}
-    <div class="loader"></div>
+    <div class="loader">
+        <div class="mdl-spinner mdl-js-spinner is-active"></div>
+    </div>
 </body>
 </html>
